# tiny-httpd

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  auto_build.sh  tiny-httpd  项目书.md  项目实现文档.md
.trae/: debug_buffer_overflow.md  debug_cgi_fix.md  stress_test.md
cmake/: arm-toolchain.cmake
src/: a.out  gui.c  http_parser.c  http_parser.h  logger.c  logger.h  main.c  server.c  server.h
test/: stress.c  test.sh  webbench.c
www/: 404.html  500.html  index.html  patient_queue.json  stats.json  style.css
www/cgi-bin/: api  cgi-test  echo.py  hello.py  status  test.c
www/ota/: version
